--- a/index.html
+++ b/index.html
@@ -41,6 +41,13 @@
       font-weight: bold;
       color: #333;
     }
+     }
+
+    #clock {
+      font-size: 2.5rem;
+      font-weight: bold;
+      color: #333;
+    }
 
     #date {
       font-size: 1.5rem;
