--- a/index.html
+++ b/index.html
@@ -52,6 +52,16 @@
     #date {
       font-size: 1.5rem;
       color: #555;
+      
+    #clock {
+      font-size: 2.5rem;
+      font-weight: bold;
+      color: #333;
+    }
+
+    #date {
+      font-size: 1.5rem;
+      color: #555;
     }
   </style>
 </head>
