--- a/index.html
+++ b/index.html
@@ -63,6 +63,15 @@
       font-size: 1.5rem;
       color: #555;
     }
+          font-size: 2.5rem;
+      font-weight: bold;
+      color: #333;
+    }
+
+    #date {
+      font-size: 1.5rem;
+      color: #555;
+    }g
   </style>
 </head>
 <body>
