--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
   <title>Zoola Clock</title>
   <style>
     body {
+       margin: 0;
+      padding: 0;
+      height: 100vh;
+      background: linear-gradient(to right, #74ebd5, #acb6e5);
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
       margin: 0;
       padding: 0;
       height: 100vh;
